--- a/UniFiler10/Views/FolderView.xaml
+++ b/UniFiler10/Views/FolderView.xaml
@@ -4,62 +4,63 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
+    xmlns:ctl="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utilz="using:Utilz"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-    <!--DataContextChanged="OnDataContextChanged"-->
-    
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <Grid>
-            <Grid Visibility="{Binding IsEnabled, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Visible}">
-                <TextBlock 
+
+    <Grid>
+        <Grid Visibility="{Binding IsEnabled, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Visible}">
+            <TextBlock 
                     x:Uid="NoFolder"
                     VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            </Grid>
+        </Grid>
 
-            <Grid Visibility="{Binding IsEnabled, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}">
+        <ScrollViewer Visibility="{Binding IsEnabled, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
+            VerticalScrollBarVisibility="Auto" VerticalScrollMode="Enabled"
+            HorizontalScrollBarVisibility="Disabled" HorizontalScrollMode="Disabled">
+
+            <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
 
                 <!-- basic data -->
-                <VariableSizedWrapGrid Grid.Row="0"
-                    IsDoubleTapEnabled="False" 
-                    IsHoldingEnabled="False" 
-                    IsRightTapEnabled="False" 
-                    Orientation="Horizontal"
-                    ItemWidth="{StaticResource ItemWidth}"
-                    ItemHeight="{StaticResource ItemHeight}">
+                <VariableSizedWrapGrid Grid.Row="0" Orientation="Horizontal">
                     <TextBox
-                        Width="{StaticResource ItemWidth}"
-                        VerticalAlignment="Center"
-                        TextWrapping="Wrap"
-                        MaxLength="{StaticResource MaxFolderNameLength}"
-                        Text="{Binding Name, Mode=TwoWay}"/>
+                    Width="{StaticResource ItemWidth}"
+                    Height="{StaticResource ItemHeight}"
+                    VerticalAlignment="Center"
+                    TextWrapping="Wrap"
+                    MaxLength="{StaticResource MaxFolderNameLength}"
+                    Text="{Binding Name, Mode=TwoWay}"/>
                     <TextBox
-                        Width="{StaticResource ItemWidth}"
-                        VerticalAlignment="Center"
-                        TextWrapping="Wrap"
-                        MaxLength="{StaticResource MaxFolderDescrLength}"
-                        Text="{Binding Descr0, Mode=TwoWay}"/>
+                    Width="{StaticResource ItemWidth}"
+                    Height="{StaticResource ItemHeight}"
+                    VerticalAlignment="Center"
+                    TextWrapping="Wrap"
+                    MaxLength="{StaticResource MaxFolderDescrLength}"
+                    Text="{Binding Descr0, Mode=TwoWay}"/>
                     <TextBox
-                        Width="{StaticResource ItemWidth}"
-                        VerticalAlignment="Center"
-                        TextWrapping="Wrap"
-                        MaxLength="{StaticResource MaxFolderDescrLength}"
-                        Text="{Binding Descr1, Mode=TwoWay}"/>
+                    Width="{StaticResource ItemWidth}"
+                    Height="{StaticResource ItemHeight}"
+                    VerticalAlignment="Center"
+                    TextWrapping="Wrap"
+                    MaxLength="{StaticResource MaxFolderDescrLength}"
+                    Text="{Binding Descr1, Mode=TwoWay}"/>
                     <TextBox
-                        Width="{StaticResource ItemWidth}"
-                        VerticalAlignment="Center"
-                        TextWrapping="Wrap"
-                        MaxLength="{StaticResource MaxFolderDescrLength}"
-                        Text="{Binding Descr2, Mode=TwoWay}"/>
+                    Width="{StaticResource ItemWidth}"
+                    Height="{StaticResource ItemHeight}"
+                    VerticalAlignment="Center"                    
+                    TextWrapping="Wrap"
+                    MaxLength="{StaticResource MaxFolderDescrLength}"
+                    Text="{Binding Descr2, Mode=TwoWay}"/>
                 </VariableSizedWrapGrid>
 
                 <!-- dynamic categories -->
@@ -78,7 +79,7 @@
                         Icon="Edit"
                         x:Uid="EditCategories">
                     </AppBarToggleButton>
-                    <utilz:TolerantListView
+                    <ctl:TolerantListView
                         x:Name="CategoriesLV"
                         Grid.Column="1"
                         Visibility="{Binding IsEditingCategories, Converter={StaticResource BooleanToVisibleConverter}}"
@@ -88,11 +89,10 @@
                         VerticalAlignment="Center"                        
                         IsHoldingEnabled="False"
                         IsDoubleTapEnabled="False"
-                        IsSwipeEnabled="True" 
                         IsRightTapEnabled="False">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <VirtualizingStackPanel Orientation="Vertical"/>
+                                <ItemsStackPanel Orientation="Vertical"/>
                             </ItemsPanelTemplate>
                         </ItemsControl.ItemsPanel>
                         <ItemsControl.ItemTemplate>
@@ -107,25 +107,16 @@
                                 </StackPanel>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
-                    </utilz:TolerantListView>
+                    </ctl:TolerantListView>
                 </Grid>
 
                 <!-- dynamic fields -->
                 <ItemsControl Grid.Row="2"
-                    ItemsSource="{Binding DynamicFields}">
+                ItemsSource="{Binding DynamicFields}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <VirtualizingStackPanel Orientation="Vertical"/>
+                            <ItemsStackPanel Orientation="Vertical"/>
                         </ItemsPanelTemplate>
-                        <!--<ItemsPanelTemplate>
-                            <VariableSizedWrapGrid 
-                                IsDoubleTapEnabled="False" 
-                                IsHoldingEnabled="False" 
-                                IsRightTapEnabled="False" 
-                                Orientation="Horizontal"
-                                ItemWidth="{StaticResource ItemWidth}"
-                                ItemHeight="{StaticResource ItemHeight}"/>
-                        </ItemsPanelTemplate>-->
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
@@ -167,13 +158,10 @@
                 </ItemsControl>
 
                 <!-- Wallets -->
-                <Grid Grid.Row="3"
-                    Background="Pink">
-                    <local:WalletsView 
-                        VM="{Binding ElementName=me, Path=VM}"
-                        DataContext="{Binding}"/>
-                </Grid>
+                <local:WalletsView Grid.Row="3"
+                VM="{Binding ElementName=me, Path=VM}"
+                DataContext="{Binding}"/>
             </Grid>
-        </Grid>
-    </ScrollViewer>
+        </ScrollViewer>
+    </Grid>
 </UserControl>
